src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:17:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&X,)>`
              found type `FnOnce<(&X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:25:9
   |
LL |         |x| x
   |         ^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:17:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'r> Fn<(&'r X,)>`
              found type `Fn<(&'<empty> X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:25:9
   |
LL |         |x| x
   |         ^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:17:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&X,)>`
              found type `FnOnce<(&'<empty> X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:25:9
   |
LL |         |x| x
   |         ^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:17:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'r> Fn<(&'r X,)>`
              found type `Fn<(&'<empty> X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:25:9
   |
LL |         |x| x
   |         ^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:17:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&X,)>`
              found type `FnOnce<(&'<empty> X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:25:9
   |
LL |         |x| x
   |         ^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
